# titan-cli

./: .gitignore  AGENTS.md  AI_OPT_IN_SUMMARY.md  AI_WORKFLOW_IMPLEMENTATION.md  DEVELOPMENT.md  INSTALL.md  INTEGRATION_SUMMARY.md  MENU_AI_PR_IMPLEMENTATION.md  Makefile  PLATFORM_AGENT_INTEGRATION_PLAN.md  README.md  pyproject.toml  test_agent_workflow.py  test_opt_in_behavior.py  test_workflow_execution.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
.titan/: config.toml
.titan/steps/: ruff_linter.py  test_runner.py
.titan/workflows/: commit-ai.yaml  commit.yaml  create-pr-ai.yaml
config/agents/: platform_agent.toml
docs/: AGENT_STEPS.md  AI_CONFIGURATION.md  TAP_INTEGRATION.md
docs/guides/: creating-visual-components.md
examples/workflows/: ai_commit_workflow.py
plugins/titan-plugin-git/: AGENTS.md  pyproject.toml
plugins/titan-plugin-git/tests/: test_git_plugin.py
plugins/titan-plugin-git/titan_plugin_git/: messages.py  plugin.py
plugins/titan-plugin-git/titan_plugin_git/clients/: git_client.py
plugins/titan-plugin-git/titan_plugin_git/steps/: ai_commit_message_step.py  branch_steps.py  commit_step.py  handle_changes_step.py  prompt_step.py  push_step.py  status_step.py
plugins/titan-plugin-git/titan_plugin_git/workflows/: commit-ai.yaml
plugins/titan-plugin-github/: pyproject.toml
plugins/titan-plugin-jira/: AGENTS.md  pyproject.toml
plugins/titan-plugin-jira/tests/integration/: test_analyze_workflow.py
plugins/titan-plugin-jira/titan_plugin_jira/: exceptions.py  messages.py  plugin.py
plugins/titan-plugin-jira/titan_plugin_jira/agents/: config_loader.py  jira_agent.py
plugins/titan-plugin-jira/titan_plugin_jira/clients/: jira_client.py
plugins/titan-plugin-jira/titan_plugin_jira/config/: jira_agent.toml
plugins/titan-plugin-jira/titan_plugin_jira/formatters/: markdown_formatter.py
plugins/titan-plugin-jira/titan_plugin_jira/steps/: ai_analyze_issue_step.py  get_issue_step.py  prompt_select_issue_step.py  search_saved_query_step.py
plugins/titan-plugin-jira/titan_plugin_jira/utils/: __init__.py  saved_queries.py
plugins/titan-plugin-jira/titan_plugin_jira/workflows/: analyze-my-issues.yaml
tests/: test_cli.py
tests/agents/: test_platform_agent.py
tests/ai/: test_client_tap.py  (+1 more)
titan_cli/: __main__.py  cli.py  messages.py  preview.py
(+107 files in other folders)
