[tool.poetry]
name = "titan-plugin-git"
version = "0.1.0"
description = "Git plugin for Titan CLI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
titan-cli = ">=0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
