[tool.poetry]

[tool.poetry.dependencies]
python = ">=3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "titan-plugin-git"
version = "0.1.0"
description = "Git plugin for Titan CLI"
authors = [
    {name = "Alex", email = "alejandro.lopezr@masmovil.com"}
]
requires-python = ">=3.10"
dependencies = [
    # No specific dependencies other than python
]

[project.entry-points."titan.plugins"]
git = "titan_plugin_git.plugin:GitPlugin"
