[tool.poetry]
name = "titan-plugin-git"
version = "0.1.0"
description = "Git plugin for Titan CLI"
authors = ["Alex <alejandro.lopezr@masmovil.com>"]
packages = [{include = "titan_plugin_git"}]

[tool.poetry.dependencies]
python = ">=3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."titan.plugins"]
git = "titan_plugin_git.plugin:GitPlugin"

